# mp.c

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  README.md
.hkup/: post-merge
src/: color.h  display.c  display.h  info.c  info.h  key.c  key.h  main.c  mpc.c  mpc.h  pad.c  pad.h  setting.c  setting.h  sound.c  sound.h  util.c  util.h
